--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "seu-reporter-frontend",
   "version": "1.0.0",
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "vite"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
